Fix range-divider alignment

--- a/src/DateRangePicker.less
+++ b/src/DateRangePicker.less
@@ -15,6 +15,7 @@
 
   &__wrapper {
     display: flex;
+    align-items: center;
     border: thin solid gray;
   }
 
@@ -23,6 +24,7 @@
     @dot-width: .217em;
     // own padding + inputs padding + digits width + dots width
     min-width: calc(~"(4px * 3) + " @digit-width * 8 ~" + " @dot-width * 2);
+    height: 100%;
     flex-grow: 1;
     display: flex;
     padding: 0 2px;
